@@ -27,9 +27,14 @@ OpenTK 0.9.0 -> 0.9.1
 	+ Platform.X11
 		+ Simplified input handling.
 	+ Fonts
+		+ Moved to OpenTK.Utilities.
+
+ + OpenTK.Utilities
+	 + Fonts
+		+ Moved to OpenTK.Graphics from OpenTK.Fonts.
 		+ Implemented immediate text printing (without caching).
-		+ Improved space width calculation.
-		+ Fixed TextureFont.MeasureString calculation.
+		+ Improved width calculation for space characters.
+		+ Fixed width calucalated by TextureFont.MeasureString.
 
 + Examples
 	+ Added GluTessellator example.
